[package]
name = "esp32c3_ble_provisioning"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.10.0" }
esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.5.0", features = ["esp32c3","log"] }

esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", rev = "37dd9ed7ae07a86f7afaef34fa4cbb48ad41b210", features = ["esp32c3", "embedded-svc", "wifi", "ble"] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.25.0", default-features = false}

picopb = "0.1.0"
bleps = { git = "https://github.com/bjoernQ/bleps.git", features = ["macros"] }

esp-storage = { version = "0.2.0", features = ["esp32c3"] }
embedded-storage = "0.3.0"

heapless = "0.7.16"
embedded-io = "0.4.0"
